--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -30,11 +30,11 @@
   text-align: center;
   text-transform: uppercase;
   border-radius: 6px;
-  border: none;
+  border: 2px solid var(--btn-hover);
   cursor: pointer;
   transition: all 0.3s ease-in-out;
-  background-color: var(--btn-bg);
-  color: var(--btn-text);
+  background-color: white;
+  color: var(--btn-hover);
   width: auto;
   min-width: 200px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
@@ -42,6 +42,7 @@
 
 .btn-primary:hover {
   background-color: var(--btn-hover);
+  color: white;
   transform: scale(1.05);
   box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.3);
 }
